test/patterns/s0066_plus_one/hafis/starchat/jml_syntax_checking.txt
./test/s0066_plus_one/hafis/starchat/Solution.java:12: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < digits.length; ((digits <= 9) && (digits >= 0)));
                                                             ^
  first type:  int[]
  second type: int
./test/s0066_plus_one/hafis/starchat/Solution.java:12: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < digits.length; ((digits <= 9) && (digits >= 0)));
                                                                              ^
  first type:  int[]
  second type: int
./test/s0066_plus_one/hafis/starchat/Solution.java:14: error: bad operand types for binary operator '<='
//@ ensures(\forall int i; 0 <= i < \result.length; ((\result <= 9) && (\result >= 0)));
                                                              ^
  first type:  int[]
  second type: int
./test/s0066_plus_one/hafis/starchat/Solution.java:14: error: bad operand types for binary operator '>='
//@ ensures(\forall int i; 0 <= i < \result.length; ((\result <= 9) && (\result >= 0)));
                                                                                ^
  first type:  int[]
  second type: int
./test/s0066_plus_one/hafis/starchat/Solution.java:16: error: array required, but int found
//@ ensures((\forall int i; 0 <= i < digits.length; digits[i] == 9[i]) ==> (\result[0] == 1 && \result[1] == 0));
                                                                 ^
./test/s0066_plus_one/hafis/starchat/Solution.java:17: error: array required, but int found
//@ ensures((\forall int i; 0 <= i < digits.length; digits[i] == 0[i]) ==> (\forall int i; 0 <= i < \result.length; \result[i] == 1[i]));
                                                                 ^
./test/s0066_plus_one/hafis/starchat/Solution.java:17: error: array required, but int found
//@ ensures((\forall int i; 0 <= i < digits.length; digits[i] == 0[i]) ==> (\forall int i; 0 <= i < \result.length; \result[i] == 1[i]));
                                                                                                                                  ^
7 errors
